# realview_chat

./: .env.example  .gitignore  README.md  check_models.py  pyproject.toml  requirements.txt
data/: image_download.py  sample_input.csv
scripts/: openai_pass1.py  run_cases.py  run_pipeline.py
src/realview_chat/: __init__.py  config.py
src/realview_chat/io/: __init__.py  csv_reader.py  image_loader.py  results_writer.py
src/realview_chat/openai_client/: __init__.py  prompts.py  responses.py  schemas.py
src/realview_chat/pipeline/: __init__.py  pass1.py  pass2.py  pass25.py  property_processor.py
src/realview_chat/utils/: logging.py  rate_limit.py  retry.py
web/backend/: app.py
web/frontend/: package-lock.json
web/frontend/src/: App.jsx
web/frontend/src/components/ui/: ClassificationBadge.jsx  FeatureBadge.jsx  ImageCard.jsx  ScoreDropdown.jsx
web/frontend/src/services/: api.js
web/frontend/src/views/: BenchmarkingReport.jsx  GroundTruthGallery.jsx  PropertyReviewView.jsx  SummaryDashboard.jsx
