[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realview-chat"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv",
  "openai",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
